[project]
name = "breakfast"
version = "0.4.6"
description = "Fast putative outbreak cluster and infection chain detection using SNPs."
readme = "README.md"
license = "MIT"
authors = [
  {name = "Matthew Huska", email = "HuskaM@rki.de"},
  {name = "Denis Beslic", email = "BeslicD@rki.de"},
]

[project.urls]
repository = "https://github.com/rki-mf1/breakfast"

[project.scripts]
breakfast = "breakfast.console:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
networkx = "^3.4.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.6"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-black = "^0.3.2"
flake8-import-order = "^0.18.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["breakfast"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
