[project]
name = "breakfast"
version = "0.4.6"
description = "Fast putative outbreak cluster and infection chain detection using SNPs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
  {name = "Matthew Huska", email = "HuskaM@rki.de"},
  {name = "Denis Beslic", email = "BeslicD@rki.de"},
]
dependencies = [
  "click>=8.1.7,<9.0.0",
  "networkx>=3.4.2,<4.0.0",
  "numpy>=2.1.3,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "scikit-learn>=1.5.2,<2.0.0",
  "scipy>=1.14.1,<2.0.0",
]

[project.urls]
repository = "https://github.com/rki-mf1/breakfast"

[project.scripts]
breakfast = "breakfast.console:main"

[dependency-groups]
dev = [
  "coverage>=7.6.6,<8.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=6.0.0,<8.0.0",
  "ruff>=0.8,<1.0",
]

[tool.uv]
exclude-newer = "1 week"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "B", "S", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["breakfast"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling>=1.27,<2.0"]
build-backend = "hatchling.build"
